ADD -> Mapper usage + testing

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
 
     testOptions {
         animationsDisabled = true
+        //unitTests.returnDefaultValues = true
     }
     buildFeatures {
         viewBinding true
