--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     //
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -82,4 +83,9 @@ dependencies {
 
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
     implementation "com.google.dagger:hilt-android:2.28.1-alpha"
+
+
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.1"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.1"
+
 }
